// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders selected ClickableTag 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  exclusive={true}
  handlerTag={1}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 5,
            "borderWidth": 2,
            "margin": 10,
            "padding": 10,
          },
          Object {
            "backgroundColor": "#DCF0E5",
            "borderColor": "#4BB377",
          },
        ]
      }
    >
      <Text.Secondary
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {
              "color": "#4BB377",
            },
          ]
        }
      >
        Selected
      </Text.Secondary>
    </View>
  </View>
</RNGestureHandlerButton>
`;

exports[`renders unselected ClickableTag 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  exclusive={true}
  handlerTag={2}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderRadius": 5,
            "borderWidth": 2,
            "margin": 10,
            "padding": 10,
          },
          Object {
            "backgroundColor": "#F0F0F0",
            "borderColor": "#F0F0F0",
          },
        ]
      }
    >
      <Text.Secondary
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "bold",
              "textAlign": "center",
            },
            Object {
              "color": "#595D58",
            },
          ]
        }
      >
        Unselected
      </Text.Secondary>
    </View>
  </View>
</RNGestureHandlerButton>
`;
